# Teukhos

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
examples/: archive-tools.yaml  dev-tools.yaml  git-tools.yaml  media-tools.yaml  network-tools.yaml
tests/: test_all_servers.py  test_cli_adapter.py  test_config.py  test_engine.py  test_installers.py  test_integration.py  test_mcp_protocol.py  test_output.py
teukhos/: __init__.py  cli.py  config.py  discover.py  engine.py  output.py
teukhos/adapters/: __init__.py  base.py  cli.py
teukhos/installers/: auggie.py  claude_code.py  claude_desktop.py  cline.py  codebuddy.py  codex.py  continue_dev.py  gemini_cli.py  kiro.py  opencode.py  roo_code.py
